Updating the /ForSaleEntries endpoints to also return the title of the book.
